objects/VoiceCall.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Voice_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Reason__c</fullName>
        <label>Call Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Voice Calls</relationshipLabel>
        <relationshipName>Voice_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Trace_Record_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://servicecloudvoice&quot;&amp; $Organization.Id &amp;&quot;.my.connect.aws/contact-trace-records/details/&quot;&amp; VendorCallKey &amp;&quot;?tz=PST8PDT&quot;, &quot;View CTR in Amazon Connect&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Trace Record URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Voice Calls</relationshipLabel>
        <relationshipName>Voice_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Interaction</label>
        <referenceTo>EngagementInteraction</referenceTo>
        <relationshipLabel>Voice Calls</relationshipLabel>
        <relationshipName>Voice_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IVR_Selection__c</fullName>
        <label>IVR Selection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Case_Subject__c</fullName>
        <description>Used to display in Omni channel for consistency across channels</description>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ECIAllVoice_26iKue34</fullName>
        <columns>Name</columns>
        <columns>CreatedBy</columns>
        <columns>CallStartDateTime</columns>
        <columns>FromPhoneNumber</columns>
        <columns>CallDurationInSeconds</columns>
        <columns>RelatedRecord</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedDate</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>IsRecorded</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ECI Voice Calls</label>
    </listViews>
    <listViews>
        <fullName>My_VoiceCalls</fullName>
        <filterScope>Mine</filterScope>
        <label>MyVoiceCalls</label>
    </listViews>
    <listViews>
        <fullName>My_VoiceCalls</fullName>
        <filterScope>Mine</filterScope>
        <label>MyVoiceCalls</label>
    </listViews>
    <listViews>
        <fullName>SDO_Service_Voice_Call_VoiceCall</fullName>
        <filterScope>Queue</filterScope>
        <label>General Voice</label>
        <queue>SDO_Service_Voice_Call</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>